--- a/TCDN/be_amis/MISA.AMIS.API/MISA.AMIS.CORE/MISA.AMIS.CORE.csproj
+++ b/TCDN/be_amis/MISA.AMIS.API/MISA.AMIS.CORE/MISA.AMIS.CORE.csproj
@@ -2,10 +2,32 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AppDesignerFolder>Propertiesd</AppDesignerFolder>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Properties\**" />
+    <EmbeddedResource Remove="Properties\**" />
+    <None Remove="Properties\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="AMIS.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="MyResource\Resource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="MyResource\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
