--- a/TCDN/be_amis/MISA.AMIS.API/MISA.AMIS.INTRASTRUCTURE/MISA.AMIS.INTRASTRUCTURE.csproj
+++ b/TCDN/be_amis/MISA.AMIS.API/MISA.AMIS.INTRASTRUCTURE/MISA.AMIS.INTRASTRUCTURE.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="MySqlConnector" Version="2.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
